--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,36 +1,38 @@
 .copyrgiht__creator {
-  color: $main-font-color;
-  font-size: 19px;
   font-weight: $font-bold;
-  line-height: 18px;}
+  font-size: 19px;
+  line-height: 18px;
+  color: $main-font-color;
+  display: inline-block;
+  padding-top: 10px;
+  padding-left: 37px;
+}
+
 .copyright {
-  text-decoration: none;
   position: relative;
-  border-top: 1px solid #e5e5e5;
-  min-height: 80px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 260px;
-  margin-left: auto;
+  min-height: 80px;
   margin-right: auto;
+  margin-left: auto;
+  text-decoration: none;
+  border-top: 1px solid #e5e5e5;
+
   &:hover,
-  &:focus{
-    .copyright__logo-img{
-      fill:#46c1ae;
+  &:focus {
+    .copyright__logo-img {
+      fill: #46c1ae;
     }
   }
-  &:active{
+
+  &:active {
     opacity: 0.3;
   }
 }
 
-.copyrgiht__creator {
-  display: inline-block;
-  padding-left: 37px;
-  padding-top: 10px;
-}
-.copyright__logo-img{
+.copyright__logo-img {
   position: absolute;
   top: 20px;
   right: 40px;
@@ -38,28 +40,30 @@
 }
 
 @media (min-width: $tablet-width) {
-  .copyright{
+  .copyright {
     width: 260px;
+    margin: 0;
     padding-top: 32px;
-    margin: 0px;
   }
-  .copyrgiht__creator{
+
+  .copyrgiht__creator {
     padding-left: 80px;
   }
-  .copyright__logo-img{
+
+  .copyright__logo-img {
     top: 57px;
     right: -3px;
   }
 }
 
-@media (min-width: $desctop-width){
-  .copyrgiht__creator{
-    padding-left: 0px;
+@media (min-width: $desctop-width) {
+  .copyrgiht__creator {
     padding-right: 57px;
+    padding-left: 0;
   }
 
-  .copyright{
+  .copyright {
     width: auto;
-    margin-right: 0px;
+    margin-right: 0;
   }
 }
