--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -7,22 +7,25 @@
   position: relative;
   width: 130px;
   height: 52px;
-  border: 1px solid #ececec;
   background-color: transparent;
-  &:after {
-    position: absolute;
+  border: 1px solid #ececec;
+
+  &::after {
     content: "";
+    position: absolute;
     width: 50px;
     height: 26px;
     background-image: url("../img/icon-right-arrow.svg");
     background-repeat: no-repeat;
     background-size: 50px 26px;
   }
+
   &:hover,
-  &:focus{
+  &:focus {
     opacity: 0.6;
   }
-  &:active{
+
+  &:active {
     opacity: 0.3;
   }
 }
@@ -38,14 +41,17 @@
   right: 40px;
 }
 
-@media(min-width: $tablet-width){
-  .slider__toggle{
-    border: none;
+@media (min-width: $tablet-width) {
+  .slider__toggle {
     width: 80px;
+
+    border: none;
   }
+
   .slider__toggle--previous::after {
     right: 26px;
   }
+
   .slider__toggle--next::after {
     right: 19px;
   }
