--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,10 +1,10 @@
 .advantages__title {
   margin: 0;
   padding-top: 52px;
-  color: $main-font-color;
-  font-size: 25px;
   font-weight: $font-bold;
+  font-size: 25px;
   line-height: 30px;
+  color: $main-font-color;
 }
 
 .advantages__list {
@@ -15,15 +15,17 @@
   position: relative;
   padding-top: 80px;
   padding-bottom: 5px;
-  color: $main-font-color;
-  font-size: 17px;
   font-weight: $font-bold;
+  font-size: 17px;
   line-height: 20px;
-  &:first-child{
+  color: $main-font-color;
+
+  &:first-child {
     padding-top: 86px;
-    padding-bottom: 0px;
+    padding-bottom: 0;
   }
-  &:nth-child(5){
+
+  &:nth-child(5) {
     padding-top: 76px;
   }
 }
@@ -31,65 +33,74 @@
 .advantages__icon {
   position: absolute;
   fill: $theme-color;
-  &--flower{
+
+  &--flower {
     top: 30px;
     left: 7px;
   }
-  &--money{
+
+  &--money {
     top: 29px;
   }
-  &--heart{
-  top: 32px;
-  left: 7px;
+
+  &--heart {
+    top: 32px;
+    left: 7px;
   }
-  &--ball{
-  top: 27px;
-  left: 1px;
+
+  &--ball {
+    top: 27px;
+    left: 1px;
   }
-  &--rocket{
-  top: 27px;
-  left: -6px;
+
+  &--rocket {
+    top: 27px;
+    left: -6px;
   }
-  &--gift{
-  top: 27px;
-  left: 2px;
+
+  &--gift {
+    top: 27px;
+    left: 2px;
   }
 }
 
-.advantages{
+.advantages {
   @include inside-container;
   position: relative;
+
   &::after {
-    position: absolute;
     content: "";
+    position: absolute;
+    top: 20px;
+    left: 0;
     width: 100%;
     height: 6px;
     background-image: url("../img/bg-zigzag-line.svg");
-    background-size: 320px 6px;
     background-repeat: repeat-x;
-    left: 0px;
-    top: 20px;
+    background-size: 320px 6px;
   }
 }
 
 
 @media (min-width: $tablet-width) {
-  .advantages{
-    max-width: 1050px;
+  .advantages {
     position: relative;
-      &::after {
-        position: absolute;
-        content: "";
-        width: 100%;
-        height: 24px;
-        background-image: url("../img/bg-zigzag-line.svg");
-        background-size: 772px 17px;
-        background-repeat: repeat-x;
-        transform: rotate(180deg);
-        left: 0px;
-        top: -30px;
+    max-width: 1050px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -30px;
+      left: 0;
+      width: 100%;
+      height: 24px;
+      background-image: url("../img/bg-zigzag-line.svg");
+      background-repeat: repeat-x;
+      background-size: 772px 17px;
+      transform: rotate(180deg);
     }
   }
+
   .advantages__title {
     padding-top: 43px;
     font-size: 43px;
@@ -97,67 +108,79 @@
   }
 
   .advantages__list {
-    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    width: 100%;
   }
 
-  .advantages__item{
+  .advantages__item {
     width: 37.5%;
+
     font-size: 20px;
     line-height: 22px;
-    &:nth-child(1){
-      margin-top: 20px;
+
+    &:nth-child(1) {
       order: 1;
+      margin-top: 20px;
     }
-    &:nth-child(2){
-      margin-top: 25px;
+
+    &:nth-child(2) {
       order: 3;
-    }
-    &:nth-child(3){
       margin-top: 25px;
+    }
+
+    &:nth-child(3) {
       order: 5;
-    }
-    &:nth-child(4){
       margin-top: 25px;
+    }
+
+    &:nth-child(4) {
       order: 2;
-    }
-    &:nth-child(5){
-      margin-top: 30px;
-      width: 45%;
-      order: 4;
-    }
-    &:nth-child(6){
       margin-top: 25px;
+    }
+
+    &:nth-child(5) {
+      order: 4;
+      width: 45%;
+      margin-top: 30px;
+    }
+
+    &:nth-child(6) {
       order: 6;
+      margin-top: 25px;
     }
-    &:nth-child(4n){
+
+    &:nth-child(4n) {
       margin-left: 85px;
     }
-    &:nth-child(5n){
+
+    &:nth-child(5n) {
       margin-left: 85px;
     }
-    &:nth-child(6n){
+
+    &:nth-child(6n) {
       margin-left: 85px;
     }
   }
 }
 
-@media (min-width: $desctop-width){
-  .advantages{
+@media (min-width: $desctop-width) {
+  .advantages {
     @include central-container;
-      &::after {
-        width: 1050px;
-        background-image: url("../img/bg-zigzag-line.svg");
-        background-size: 1050px 24px;
-        background-repeat: repeat-x;
-        transform: rotate(180deg);
-        left: 0px;
-        right: 0px;
-        top: -40px;
+
+    &::after {
+      top: -40px;
+      right: 0;
+      left: 0;
+      width: 1050px;
+      background-image: url("../img/bg-zigzag-line.svg");
+      background-repeat: repeat-x;
+      background-size: 1050px 24px;
+      transform: rotate(180deg);
     }
   }
+
   .advantages__title {
     padding-left: 170px;
     font-size: 53px;
@@ -165,42 +188,51 @@
   }
 
   .advantages__list {
-    padding-left: 175px;
     width: 668px;
+    padding-left: 175px;
   }
-  .advantages__item{
-    &:nth-child(1){
-      margin-top: 15px;
+
+  .advantages__item {
+    &:nth-child(1) {
       order: 1;
+      margin-top: 15px;
     }
-    &:nth-child(2){
-      margin-top: 25px;
+
+    &:nth-child(2) {
       order: 3;
-    }
-    &:nth-child(3){
       margin-top: 25px;
+    }
+
+    &:nth-child(3) {
       order: 5;
-    }
-    &:nth-child(4){
-      margin-top: 20px;
-      order: 2;
-    }
-    &:nth-child(5){
-      margin-top: 30px;
-      width: 300px;
-      order: 4;
-    }
-    &:nth-child(6){
       margin-top: 25px;
+    }
+
+    &:nth-child(4) {
+      order: 2;
+      margin-top: 20px;
+    }
+
+    &:nth-child(5) {
+      order: 4;
+      width: 300px;
+      margin-top: 30px;
+    }
+
+    &:nth-child(6) {
       order: 6;
+      margin-top: 25px;
     }
-    &:nth-child(4n){
+
+    &:nth-child(4n) {
       margin-left: 100px;
     }
-    &:nth-child(5n){
+
+    &:nth-child(5n) {
       margin-left: 100px;
     }
-    &:nth-child(6n){
+
+    &:nth-child(6n) {
       margin-left: 100px;
     }
   }
