--- a/source/sass/blocks/catalog-video.scss
+++ b/source/sass/blocks/catalog-video.scss
@@ -1,53 +1,54 @@
-.catalog-video{
+.catalog-video {
   width: 260px;
   height: 150px;
 }
 
 
-.catalog-video__btn{
+.catalog-video__btn {
   position: absolute;
   top: 40px;
   left: 50%;
-  transform: translateX(-50%);
   width: 101px;
   height: 77px;
-  background-image: url(../img/icon-play.svg);
-  background-repeat: no-repeat;
   background-color: transparent;
+  background-image: url("../img/icon-play.svg");
+  background-repeat: no-repeat;
   background-size: cover;
   border: none;
+  transform: translateX(-50%);
+
   &:hover,
-  &:focus{
-    transform:
-    scale(1.2);
+  &:focus {
     left: 43.5%;
+    transform: scale(1.2);
   }
-  &:active{
+
+  &:active {
+    transform: scale(0.8);
     opacity: 0.3;
-    transform:
-    scale(0.8);
   }
 }
 
-.catalog-video__image{
-  position: absolute;
+.catalog-video__image {
   @include img-width;
+  position: absolute;
   left: 50%;
   transform: translateX(-50%);
 }
 
 @media (min-width: $tablet-width) {
-  .catalog-video{
+  .catalog-video {
     width: 100%;
     height: 455px;
   }
-  .catalog-video__btn{
+
+  .catalog-video__btn {
     top: 190px;
   }
 }
 
 @media (min-width: $desctop-width) {
-  .catalog-video{
+  .catalog-video {
     width: 682px;
     height: 455px;
   }
