--- a/source/sass/blocks/form-sorting.scss
+++ b/source/sass/blocks/form-sorting.scss
@@ -1,121 +1,120 @@
 .form-sorting__description {
-  margin-top: 22px;
-  width: 242px;
-  color: $loghten-font;
-  font-size: 13px;
-  font-weight: $font-normal;
-  line-height: 24px;
   @include inside-container;
-}
-
-.form-sorting__fieldset {
-  @include fieldset-unstyling;
+  width: 242px;
+  margin-top: 22px;
+  font-weight: $font-normal;
+  font-size: 13px;
+  line-height: 24px;
+  color: $loghten-font;
 }
 
 .form-sorting__important-inputs {
-  margin-top: 11px;
-  color: $loghten-font;
-  font-size: 14px;
-  font-weight: $font-normal;
-  line-height: 16px;
   @include inside-container;
+  margin-top: 11px;
+  font-weight: $font-normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: $loghten-font;
 }
 
 .form-sorting__btn {
+  width: 81.2%;
   margin-top: 18px;
+  margin-right: auto;
   margin-bottom: 55px;
   margin-left: 30px;
-  margin-right: auto;
-  padding-left: 20px;
   padding-right: 22px;
-  width: 81.2%;
   padding-bottom: 16px;
+  padding-left: 20px;
   text-align: center;
 }
 
-.form-sorting__textarea{
+.form-sorting__textarea {
+  width: 78%;
+  height: 121px;
   margin-top: 15px;
   padding-top: 14px;
-  padding-left: 12px;
   padding-right: 43px;
-  height: 121px;
-  width: 78%;
-  border: 2px solid $main-font-color;
-  font-size: 17px;
+  padding-left: 12px;
   font-weight: 400;
+  font-size: 17px;
   line-height: 18px;
+  border: 2px solid $main-font-color;
 }
 
 @media (min-width: $tablet-width) {
   .form-sorting__description {
-    padding-top: 40px;
     width: 80%;
+    padding-top: 40px;
+
     font-size: 17px;
     line-height: 30px;
   }
-  .form-sorting__additional-contaner{
+
+  .form-sorting__additional-contaner {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     order: 1;
+  }
+
+  .form-sorting__bottom-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-  }
-
-  .form-sorting__bottom-container{
-    width: 100%;
     order: 2;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  .form-sorting__fieldset--bottom{
     width: 100%;
   }
+
+  .form-sorting__fieldset--bottom {
+    width: 100%;
+  }
+
   .form-sorting__btn {
     order: 1;
-    margin-top: 4px;
-    margin-left: 50px;
     width: 230px;
-    padding-bottom: 16px;
+    margin-top: 4px;
     margin-bottom: 50px;
+    margin-left: 50px;
+    padding-bottom: 16px;
   }
 
-  .form-sorting__important-inputs{
-    margin-left: auto;
-    margin-right: 50px;
+  .form-sorting__important-inputs {
+    order: 2;
     margin-top: 13px;
-    padding-right: 0px;
-    padding-left: 0px;
+    margin-right: 50px;
+    margin-left: auto;
+    padding-right: 0;
+    padding-left: 0;
     font-size: 17px;
     line-height: 30px;
-    order: 2;
   }
 
   .form-sorting__textarea {
-    margin-top: 0px;
-    font-size: 19px;
-    font-weight: 400;
-    line-height: 18px;
-    margin-right: 0px;
-    margin-left: auto;
     width: 66%;
+    margin-top: 0;
+    margin-right: 0;
+    margin-left: auto;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 18px;
   }
 }
 
-@media (min-width: $desctop-width)  {
-  .form-sorting__description{
-    padding-top: 125px;
-    max-width: 700px;
+@media (min-width: $desctop-width) {
+  .form-sorting__description {
     @include container;
+    max-width: 700px;
+    padding-top: 125px;
   }
 
-  .form-sorting__bottom-container{
-    width: 700px;
-    order: 2;
+  .form-sorting__bottom-container {
+    @include container;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    @include container;
+    order: 2;
+    width: 700px;
   }
 
   .form-sorting__btn {
@@ -123,11 +122,11 @@
     margin-bottom: 50px;
   }
 
-  .form-sorting__important-inputs{
-    padding: 0px;
-    margin-left: auto;
-    margin-right: 0;
+  .form-sorting__important-inputs {
     margin-top: 10px;
+    margin-right: 0;
+    margin-left: auto;
+    padding: 0;
     font-size: 17px;
     line-height: 30px;
   }
