--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,41 +1,41 @@
 .modal-add-item {
-  display: none;
   position: fixed;
   top: 30%;
-  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
-  border: 1px solid #c6c6c6;
+  z-index: 10;
+  display: none;
   width: 100%;
   background: #ffffff;
-  z-index: 10;
+  border: 1px solid #c6c6c6;
+  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   cursor: default;
 }
 
 .modal-add-item__title {
-  margin-left: auto;
+  width: 150px;
+  margin-top: 0;
   margin-right: auto;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
+  margin-left: auto;
   padding-top: 30px;
   padding-left: 5px;
+  font-weight: $font-bold;
+  font-size: 25px;
+  line-height: 30px;
   text-align: center;
   color: $main-font-color;
-  font-size: 25px;
-  font-weight: $font-bold;
-  line-height: 30px;
   text-transform: uppercase;
-  width: 150px;
   cursor: pointer;
 }
 
 .modal-add-item__size-title {
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  color: $loghten-font;
-  font-size: 15px;
-  font-weight: $font-normal;
-  line-height: 30px;
   width: 136px;
+  margin-top: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  font-weight: $font-normal;
+  font-size: 15px;
+  line-height: 30px;
+  color: $loghten-font;
 }
 
 .modal-add-item__select {
@@ -43,24 +43,24 @@
 }
 
 .modal-add-item__btn {
-  margin-left: auto;
+  display: block;
+  width: 81.25%;
   margin-right: auto;
   margin-bottom: 46px;
-  padding: 12px 0px;
+  margin-left: auto;
+  padding: 12px 0;
   padding-bottom: 16px;
-  display: block;
+  color: $primary-color;
   background-color: $theme-color;
   border: 2px solid $theme-color;
-  color: $primary-color;
-  width: 81.25%;
   cursor: pointer;
 }
 
-@media(min-width: $tablet-width) {
+@media (min-width: $tablet-width) {
   .modal-add-item {
-    display: none;
-    left: 12%;
     right: 12%;
+    left: 12%;
+    display: none;
     width: 566px;
   }
 
@@ -71,26 +71,26 @@
   }
 
   .modal-add-item__size-title {
+    width: 62.7%;
     margin-top: 15px;
-    width: 62.7%;
-    text-align: center;
     font-size: 17px;
+    text-align: center;
   }
 
-  .modal-add-item__select{
+  .modal-add-item__select {
     width: 62.7%;
   }
 
-  .modal-add-item__btn{
+  .modal-add-item__btn {
+    width: 62.7%;
     margin-top: 25px;
-    width: 62.7%;
   }
 }
 
-@media(min-width: $desctop-width) {
+@media (min-width: $desctop-width) {
   .modal-add-item {
-      left: 50%;
-      transform: translateX(-50%);
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
