--- a/source/sass/blocks/overlay.scss
+++ b/source/sass/blocks/overlay.scss
@@ -1,24 +1,24 @@
-.overlay  {
+.overlay {
   position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
   display: none;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(255,255,255,0.9);
-  z-index: 3;
+  background-color: rgba(255, 255, 255, 0.9);
   cursor: pointer;
 }
 
-.overlay__btn{
-  background-color: transparent;
-  border: none;
+.overlay__btn {
   width: 100%;
   height: 100%;
+  background-color: transparent;
+  border: none;
 }
 
-.overlay-show{
+.overlay-show {
   display: block;
 }
