--- a/source/sass/blocks/size-list.scss
+++ b/source/sass/blocks/size-list.scss
@@ -1,54 +1,54 @@
 .size-list {
-  margin-top: 37px;
-  margin-bottom: 39px;
+  @include inside-container;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  @include inside-container;
   justify-content: space-between;
+  margin-top: 37px;
+  margin-bottom: 39px;
 }
 
-.modal-add-item__item{
-  padding: 13px 0pc;
+.modal-add-item__item {
   margin-top: 5px;
   margin-bottom: 5px;
+  padding: 13px 0;
 }
 
 .size-list__label {
   padding: 13px 33px;
-  font-size: 17px;
   font-weight: $font-bold;
+  font-size: 17px;
   line-height: 16px;
-  text-transform: uppercase;
   color: $loghten-font;
-  border: 2px solid rgba(68,68,68, 0.1);
+  text-transform: uppercase;
+  border: 2px solid rgba(68, 68, 68, 0.1);
 }
 
 .size-list__label:hover,
-.size-list__radio:focus + .size-list__label{
-  border: 2px solid rgba(68,68,68, 0.3);
+.size-list__radio:focus + .size-list__label {
+  border: 2px solid rgba(68, 68, 68, 0.3);
 }
 
-.size-list__radio:checked + .size-list__label{
+.size-list__radio:checked + .size-list__label {
   border: 2px solid $theme-color;
 }
 
 @media (min-width: $tablet-width) {
-  .size-list{
+  .size-list {
     margin-top: 21px;
-    margin-left: auto;
     margin-right: auto;
-    padding: 0px;
     margin-bottom: 10px;
+    margin-left: auto;
+    padding: 0;
   }
 
-  .modal-add-item__item{
-    padding: 13px 0pc;
+  .modal-add-item__item {
     margin-top: 5px;
     margin-bottom: 5px;
+    padding: 13px 0;
   }
 
-  .modal-add-item__item:nth-child(2){
+  .modal-add-item__item:nth-child(2) {
     .size-list__label {
       padding: 13px 45px;
     }
@@ -58,4 +58,3 @@
     padding: 13px 50px;
   }
 }
-
