Не сделал автоматизацию

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -173,7 +173,8 @@
       top: -40px;
       right: 0;
       left: 0;
-      width: 1050px;
+      margin: 0 auto;
+      max-width: 1050px;
       background-image: url("../img/bg-zigzag-line.svg");
       background-repeat: repeat-x;
       background-size: 1050px 24px;
