--- a/source/sass/blocks/order-fieldset.scss
+++ b/source/sass/blocks/order-fieldset.scss
@@ -127,6 +127,7 @@
   border: 2px solid $theme-color;
 }
 
+.order-fieldset__label--checkbox:active::after,
 .order-fieldset__label--radio:active::after {
   border: 2px solid rgba(68, 68, 68, 0.3);
 }
