--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,7 @@
 @import "colors.scss";
 @import "global.scss";
 @import "mixins.scss";
-@import "visually-hidden.scss";
+@import "blocks/visually-hidden.scss";
 @import "blocks/btn.scss";
 @import "blocks/main-header.scss";
 @import "blocks/main-nav.scss";
