--- a/source/sass/blocks/production.scss
+++ b/source/sass/blocks/production.scss
@@ -68,6 +68,7 @@
     margin-top: 50px;
     margin-right: 50px;
     margin-left: 50px;
+    margin-bottom: 65px;
     border: 1px solid #ececec;
   }
 
