--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -64,15 +64,17 @@
   }
 
   .page-header::after {
+    margin-left: auto;
+    margin-right: auto;
     content: "";
     position: absolute;
     bottom: -20px;
-    left: 50%;
-    width: 1150px;
+    left: 0;
+    right: 0;
+    max-width: 1150px;
     height: 34px;
     background-image: url("../img/bg-zigzag-fill.svg");
     background-size: 1150px 34px;
-    transform: translateX(-50%);
   }
 
   .page-header__title {
