--- a/source/sass/font-stack.scss
+++ b/source/sass/font-stack.scss
@@ -6,6 +6,7 @@ $font-normal: 400;
   font-family: "Open Sans";
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
   src:
     url("../fonts/opensans-regular.woff2") format("woff2"),
     url("../fonts/opensans-regular.woff") format("woff");
@@ -15,6 +16,7 @@ $font-normal: 400;
   font-family: "Open Sans";
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
   src:
     url("../fonts/opensans-bold.woff2") format("woff2"),
     url("../fonts/opensans-bold.woff") format("woff");
