--- a/source/sass/blocks/rewiews.scss
+++ b/source/sass/blocks/rewiews.scss
@@ -103,7 +103,8 @@
 
   .reviews__text {
     order: 3;
-    width: 97.4%;
+    width: 97.6%;
+    max-width: 646px;
     padding-top: 50px;
     font-size: 17px;
     line-height: 30px;
