--- a/source/sass/blocks/weekly-goods.scss
+++ b/source/sass/blocks/weekly-goods.scss
@@ -214,6 +214,9 @@
 
     &::after {
       top: -14px;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
       background-size: 1250px 34px;
     }
   }
