--- a/source/sass/blocks/catalog-video.scss
+++ b/source/sass/blocks/catalog-video.scss
@@ -34,6 +34,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  background-color: #508276;
 }
 
 @media (min-width: $tablet-width) {
